57-wordpress-nfs-sans-helm/service-wordpress.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-wordpress
  labels:
    app: wordpress-wordpress
spec:
  ports:
    - port: 80
  selector:
    app: wordpress-wordpress
  clusterIP: None
