57-wordpress-nfs-sans-helm/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
spec:
  rules:
  - host: wordpress.kub
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress-wordpress
          servicePort: 80
